--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -89,6 +89,9 @@ sqlparser = "0.43.1"
 csv = "1.3.0"
 object_store = { version = "0.9.1", features = ["gcp"] }
 
+sled = "0.34.7"
+borsh = { version = "1.3.1", features = ["derive"] }
+
 [dev-dependencies]
 clap = { version = "3.2.25", features = ["derive", "env"] }
 maplit = "1.0.2"
