--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -12,6 +12,10 @@ path = "src/main.rs"
 name = "graphman"
 path = "src/bin/manager.rs"
 
+[[bin]]
+name = "indexer"
+path = "src/bin/indexer.rs"
+
 [dependencies]
 clap = { version = "3.2.25", features = ["derive", "env"] }
 env_logger = "0.10.1"
@@ -28,6 +32,7 @@ graph-chain-near = { path = "../chain/near" }
 graph-chain-cosmos = { path = "../chain/cosmos" }
 graph-chain-substreams = { path = "../chain/substreams" }
 graph-chain-starknet = { path = "../chain/starknet" }
+graph-chain-dataset = { path = "../chain/dataset" }
 graph-graphql = { path = "../graphql" }
 graph-server-http = { path = "../server/http" }
 graph-server-index-node = { path = "../server/index-node" }
@@ -42,3 +47,7 @@ diesel = { workspace = true }
 http = "0.2.5" # must be compatible with the version rust-web3 uses
 prometheus = { version = "0.13.3", features = ["push"] }
 json-structural-diff = { version = "0.1", features = ["colorize"] }
+
+sled = "0.34.7"
+borsh = { version = "1.3.1", features = ["derive"] }
+uniswap = { path = "../transforms/uniswap" }
