--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,10 @@ repository = "https://github.com/graphprotocol/graph-node"
 license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
-diesel = { version = "2.1.3", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
+diesel = { version = "2.1.3", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
 diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
 diesel_derives = "2.1.3"
-diesel-dynamic-schema = "0.2.1"
+diesel-dynamic-schema = { version = "0.2.1", features = ["postgres"] }
 diesel_migrations = "2.1.0"
 prost = "0.11.9"
 prost-types = "0.11.9"
